src_old/objects/ProjectService__c.object
<CustomObject>
    <description>Project Service relates a Service to a Project and is a container used to define the instance of a Service for a specific Project. Project Service is related to Project, Job, Project Service Attribute, Project Service Certification, Project Service Equipment, Project Service Material, Project Service Question, Project Service Target, and Service.</description>
    <fields>
        <fullName>AttachmentLastModifiedDate__c</fullName>
        <label>Attachment Last Modified Date</label>
        <summarizedField>ProjectServiceAttribute__c.LastModifiedDate</summarizedField>
        <summaryFilterItems>
            <field>ProjectServiceAttribute__c.AttachmentURL__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceAttribute__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AttachmentLastModifiedDateforHT__c</fullName>
        <label>Attachment Last Modified Date for HT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AttributeLastModifiedDate__c</fullName>
        <label>Attribute Last Modified Date</label>
        <summarizedField>ProjectServiceAttribute__c.LastModifiedDate</summarizedField>
        <summaryFilterItems>
            <field>ProjectServiceAttribute__c.AttachmentURL__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceAttribute__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AttributeLastModifiedDateforHT__c</fullName>
        <label>Attribute Last Modified Date for HT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CancelReasonComment__c</fullName>
        <label>Cancel Reason Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier Requested</fullName>
                </value>
                <value>
                    <fullName>Retailer Requested</fullName>
                </value>
                <value>
                    <fullName>No Capacity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <formula>RetailerCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificationLastModifiedDate__c</fullName>
        <label>Certification Last Modified Date</label>
        <summarizedField>ProjectServiceCertification__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>ProjectServiceCertification__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CertificationLastModifiedDateforHT__c</fullName>
        <label>Certification Last Modified Date for HT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChangeRecordType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ChangeRecordType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckDistribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Adding Distribution Check service, set flag so that distribution repository is checked at each Location.</description>
        <inlineHelpText>Select to create Target questions only for Products in distribution (PDS) at the rep&apos;s location.</inlineHelpText>
        <label>Filter Targets by Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DayNumber__c</fullName>
        <label>DEPRECATED Day Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DayNumbers__c</fullName>
        <inlineHelpText>A numeric value given to each day within the project window. Choose the Day Number(s) on which to conduct the work. (Number of entries is determined by the Project Number of Days.)</inlineHelpText>
        <label>Day Number(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>ProjectNumberofDays__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>Select internal department to use for reporting</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bakery</fullName>
                </value>
                <value>
                    <fullName>Deli</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Meat</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Produce</fullName>
                </value>
                <value>
                    <fullName>Seafood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentLastModifiedDate__c</fullName>
        <label>Equipment Last Modified Date</label>
        <summarizedField>ProjectServiceEquipment__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>ProjectServiceEquipment__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EquipmentLastModifiedDateforHT__c</fullName>
        <label>Equipment Last Modified Date for HT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EstimatedMinutes__c</fullName>
        <inlineHelpText>Estimated Project Service minutes per rep</inlineHelpText>
        <label>Estimated Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExceptionPrompt__c</fullName>
        <formula>Service__r.ExceptionPrompt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exception Prompt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates service is pushed by external system</description>
        <label>External Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FulfillmentCenterName__c</fullName>
        <label>Fulfillment Center Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasMaterials__c</fullName>
        <formula>IF( NumberOfMaterials__c &gt; 0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasMaterials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeAutoGenManual__c</fullName>
        <defaultValue>true</defaultValue>
        <description>setting to include system generated manual. Default to true</description>
        <label>Attach System Generated Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExcludedForSuccessRate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indicator that decide if this service is included in the success rate calculation.</description>
        <inlineHelpText>Determines whether service completion will be included in the Success Rate measurement in OneHub Analytic client-facing dashboards.</inlineHelpText>
        <label>Do Not Include in Success Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMaterialNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select when Project Service Materials are required.</inlineHelpText>
        <label>Is Material Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSurveyScoreExceedThreshold__c</fullName>
        <formula>SurveyComplexityScore__c &gt;= $Setup.SurveyScoreSettings__c.SurveyScoreThreshold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Survey Score Exceed Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSurveyScoreWarning__c</fullName>
        <formula>AND (SurveyComplexityScore__c &gt;= $Setup.SurveyScoreSettings__c.SurveyScoreWarning__c, SurveyComplexityScore__c 
 &lt; $Setup.SurveyScoreSettings__c.SurveyScoreThreshold__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Survey Score Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobManualFileName__c</fullName>
        <description>Stores the file name of custom template</description>
        <label>Job Manual File Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobManualTemplate__c</fullName>
        <inlineHelpText>Please upload pdf files only.</inlineHelpText>
        <label>Job Manual Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobManualURL__c</fullName>
        <description>URL to access event manual</description>
        <label>Job Manual URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JobManual__c</fullName>
        <label>JobManual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Manual</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastSummaryRefreshDateTime__c</fullName>
        <label>Last Summary Refresh Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MaterialLastModifiedDate__c</fullName>
        <label>Material Last Modified Date</label>
        <summarizedField>ProjectServiceMaterial__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>ProjectServiceMaterial__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MaterialLastModifiedDateforHT__c</fullName>
        <label>Material Last Modified Date for HT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NumberOfAssignedJobs__c</fullName>
        <label>Number of Jobs Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfAttributes__c</fullName>
        <label>Number of Attributes</label>
        <summaryForeignKey>ProjectServiceAttribute__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfCanceledJobs__c</fullName>
        <label>Number of Jobs Canceled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfClosedJobs__c</fullName>
        <label>Number of Jobs Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfCompletedJobs__c</fullName>
        <label>Number of Jobs Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfDays__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Replaced with Project Number of Days</inlineHelpText>
        <label>Number of Days - N/A FOR NEW PROJECTS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfEquipment__c</fullName>
        <label>Number of Equipment</label>
        <summaryForeignKey>ProjectServiceEquipment__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfExceptionJobs__c</fullName>
        <label>Number of Jobs Exception</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfExecutedJobs__c</fullName>
        <label>Number of Jobs Executed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfFailedQCJobs__c</fullName>
        <label>Number of Jobs Failed QC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfJobs__c</fullName>
        <label>Number of Jobs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMaterials__c</fullName>
        <label>Number of Materials</label>
        <summaryForeignKey>ProjectServiceMaterial__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfNotCanceledJobs__c</fullName>
        <label>Number of Jobs Not Canceled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfOpenJobs__c</fullName>
        <label>Number of Jobs Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfPendingJobs__c</fullName>
        <label>Number of Jobs Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReportedJobs__c</fullName>
        <label>Number of Jobs Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfScheduledJobs__c</fullName>
        <label>Number of Jobs Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfStartedJobs__c</fullName>
        <label>Number of Jobs Started</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfTargets__c</fullName>
        <label>Number of Targets</label>
        <summaryForeignKey>ProjectServiceTarget__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfWorkers__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Enter the number of workers need to finish the job</description>
        <inlineHelpText>Number of reps allocated to complete project execution at a location</inlineHelpText>
        <label>Number of Workers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofCertifications__c</fullName>
        <label>Number of Certifications</label>
        <summaryForeignKey>ProjectServiceCertification__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofDefinedResponses__c</fullName>
        <label>Number of Defined Responses</label>
        <summarizedField>ProjectServiceQuestion__c.DefinedResponseCount__c</summarizedField>
        <summaryFilterItems>
            <field>ProjectServiceQuestion__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceQuestion__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsRescheduled__c</fullName>
        <label>Number of Jobs Rescheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofJumpDefinedResponses__c</fullName>
        <label>Number of Jump Defined Responses</label>
        <summarizedField>ProjectServiceQuestion__c.JumpDefinedResponseCount__c</summarizedField>
        <summaryFilterItems>
            <field>ProjectServiceQuestion__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceQuestion__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofKittedItems__c</fullName>
        <label>Number of Kitted Items</label>
        <summaryFilterItems>
            <field>ProjectServiceTarget__c.TargetAcquired__c</field>
            <operation>equals</operation>
            <value>K</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceTarget__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofQuestions__c</fullName>
        <label>Number of Questions</label>
        <summaryFilterItems>
            <field>ProjectServiceQuestion__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceQuestion__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofTargetQuestions__c</fullName>
        <label>Number of Target Questions</label>
        <summaryFilterItems>
            <field>ProjectServiceQuestion__c.IsTargetQuestion__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ProjectServiceQuestion__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceQuestion__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OneHubRetailerId__c</fullName>
        <label>One Hub Retailer ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PcardLeadTimeCheck__c</fullName>
        <formula>BLANKVALUE(PcardLeadTime__c, $Setup.PcardLeadTimeDuration__c.PcardLeadTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PcardLeadTimeCheck</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PcardLeadTime__c</fullName>
        <label>Pcard Lead Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentCompleted__c</fullName>
        <formula>NumberOfCompletedJobs__c / ( NumberOfJobs__c -  NumberOfCanceledJobs__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentExecuted__c</fullName>
        <formula>NumberOfExecutedJobs__c / (NumberOfJobs__c -  NumberOfCanceledJobs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executed %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentFailedQC__c</fullName>
        <formula>NumberOfFailedQCJobs__c /  NumberOfNotCanceledJobs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed QC %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentScheduled__c</fullName>
        <formula>NumberOfScheduledJobs__c /  NumberOfNotCanceledJobs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PopulateTargetQuestions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To populate Target questions on Job manual</description>
        <inlineHelpText>When selected, survey questions will be repeated for each Target on the system-generated Job Manual.</inlineHelpText>
        <label>Populate Target Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectDateLaunched__c</fullName>
        <formula>Project__r.DateLaunched__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectDateLaunched</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProjectLocked__c</fullName>
        <formula>NOT ISBLANK( Project__r.ApexJobName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>Project__r.ProjectNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumberofDays__c</fullName>
        <inlineHelpText>This field is uneditable and inherits the value of Number of Days set on Project Details.</inlineHelpText>
        <label>Project Number of Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectServiceRetailerOneHubID__c</fullName>
        <label>Project Service Retailer One Hub ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <formula>TEXT(Project__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTitle__c</fullName>
        <formula>Project__r.OperationsTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTypeName__c</fullName>
        <formula>Project__r.ProjectTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <formula>Project__r.ProjectType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectVersion__c</fullName>
        <formula>Project__r.UpdateSequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>ProjectServices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PurchaseAmount__c</fullName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QuestionLastModifiedDate__c</fullName>
        <label>Question Last Modified Date</label>
        <summarizedField>ProjectServiceQuestion__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>ProjectServiceQuestion__c.ProjectService__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QuestionLastModifiedDateforHT__c</fullName>
        <label>Question Last Modified Date for HT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RefreshSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates that project service needs it&apos;s summary refreshed</description>
        <label>RefreshSummary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportedTotalTime__c</fullName>
        <label>Total Time Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResponsibleForExecution__c</fullName>
        <label>Responsible For Execution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Execution Company</fullName>
                    <default>true</default>
                    <label>Execution Company</label>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetailerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Services (Retailer Account)</relationshipLabel>
        <relationshipName>Project_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RetailerCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The list of available categories is determined by the &apos;Retailer Account&apos; set on Project Details.</inlineHelpText>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Only the selected retailer account categories are allowed.</errorMessage>
            <filterItems>
                <field>AccountCategory__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.RetailerAccount__c</valueField>
            </filterItems>
            <filterItems>
                <field>AccountCategory__c.Account__r.OneHubAccountType__c</field>
                <operation>equals</operation>
                <value>Execution Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AccountCategory__c</referenceTo>
        <relationshipLabel>Project Services</relationshipLabel>
        <relationshipName>Project_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <formula>Project__r.Retailer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer</label>
        <type>Text</type>
    </fields>
</CustomObject>